# axum-study

./: .env.local  Cargo.toml  README.md  diesel.toml
database/: Cargo.toml
database/src/: lib.rs
environments/: docker-compose.yml
gateway/: Cargo.toml
gateway/src/: lib.rs
migrations/2021-08-10-131834_create_beans/: down.sql  up.sql
models/: Cargo.toml
models/src/: lib.rs
persistence/: Cargo.toml
persistence/src/: lib.rs  memory.rs  postgres.rs  schema.rs
presenter/: Cargo.toml
presenter/src/: lib.rs
repository/: Cargo.toml
repository/src/: lib.rs
rest/: Cargo.toml
rest/src/: main.rs  views.rs
rest/src/handlers/: beans.rs  mod.rs
usecases/: Cargo.toml
usecases/src/: lib.rs
usecases/src/ports/: mod.rs
