[package]
name = "rest"
version = "0.0.0"
edition = "2018"

[dependencies]
axum = "0.1.3"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.9.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tower = "0.4.8"
usecases = { path = "../usecases" }
database = { path = "../database" }
