[package]
name = "rest"
version = "0.0.0"
edition = "2018"

[dependencies]
async-trait = "0.1.51"
axum = "0.1.3"
crossbeam-channel = "0.5.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.9.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tower = "0.4.8"
gateway = { path = "../gateway" }
models = { path = "../models" }
usecases = { path = "../usecases" }
